rettet på skrivefeil

--- a/app/src/main/res/values-nb/arrays.xml
+++ b/app/src/main/res/values-nb/arrays.xml
@@ -3,7 +3,7 @@
     <array name="wordArray">
         <item>klinkekule</item>
         <item>bamse</item>
-        <item>julesok ker</item>
+        <item>julesokker</item>
         <item>eple</item>
         <item>nattbord</item>
         <item>rulleskøyter</item>
