rettet på skrivefeil

--- a/app/src/main/res/values-nb/arrays.xml
+++ b/app/src/main/res/values-nb/arrays.xml
@@ -20,7 +20,7 @@
         <item>suksessterte</item>
         <item>stjernehimmel</item>
         <item>sandstorm</item>
-        <item>verdensdel</item>
+        <item>verdensrommet</item>
         <item>spenning</item>
         <item>drømmejobb</item>
         <item>boligblokk</item>
