Updated on 9th September

--- a/app/src/main/res/values-nb/arrays.xml
+++ b/app/src/main/res/values-nb/arrays.xml
@@ -12,10 +12,10 @@
         <item>snømann</item>
         <item>kajakk</item>
         <item>bursdagsselskap</item>
-        <item>disney world</item>
+        <item>disneyworld</item>
         <item>gorilla</item>
         <item>zoo</item>
-        <item>smørbrødsandwich</item>
+        <item>rekesmørbrød</item>
         <item>flyplass</item>
         <item>suksessterte</item>
         <item>stjernehimmel</item>
