--- a/app/src/main/res/layout/startspillet.xml
+++ b/app/src/main/res/layout/startspillet.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
@@ -14,9 +14,15 @@
         android:layout_height="wrap_content"
         android:text="Hangman-spill"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/image"/>
+
+
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="bottom"
         android:orientation="horizontal">
@@ -76,11 +82,11 @@
             android:layout_height="wrap_content"
             android:text="Å"/>
 
-    </LinearLayout>
+    </TableRow>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="bottom"
         android:orientation="horizontal">
@@ -140,11 +146,11 @@
             android:layout_height="wrap_content"
             android:text="Æ"/>
 
-    </LinearLayout>
+    </TableRow>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="bottom"
         android:orientation="horizontal">
@@ -157,33 +163,39 @@
         <Button
             android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:text="X"/>
+            android:text="X"
+            android:layout_weight="1" />
 
         <Button
             android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:text="C"/>
+            android:text="C"
+            android:layout_weight="1" />
 
         <Button
             android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:text="V"/>
+            android:text="V"
+            android:layout_weight="1" />
 
         <Button
             android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:text="B"/>
+            android:text="B"
+            android:layout_weight="1" />
 
         <Button
             android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:text="N"/>
+            android:text="N"
+            android:layout_weight="1" />
 
         <Button
             android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:text="M"/>
+            android:text="M"
+            android:layout_weight="1" />
 
-    </LinearLayout>
+    </TableRow>
 
 </LinearLayout>
