--- a/app/src/main/res/layout/startspillet.xml
+++ b/app/src/main/res/layout/startspillet.xml
@@ -7,7 +7,9 @@
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
+    android:layout_gravity="bottom"
     tools:context=".MainActivity">
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,7 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/image"/>
-
 
     <TableRow
         android:layout_width="wrap_content"
@@ -195,7 +196,5 @@
             android:layout_height="wrap_content"
             android:text="M"
             android:layout_weight="1" />
-
     </TableRow>
-
 </LinearLayout>
