neste: sette igang selve spillet.

--- a/S169954Mappe1-master/app/src/main/res/values-de/arrays.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-de/arrays.xml
@@ -2,8 +2,8 @@
 <resources>
     <array name="wordArray">
         <item>marmor</item>
-        <item>bär</item>
-        <item>weihnachten socken</item>
+        <item>baer</item>
+        <item>weihnachtensocken</item>
         <item>apfel</item>
         <item>nachttisch</item>
         <item>rollerbladen</item>
@@ -17,7 +17,7 @@
         <item>zoo</item>
         <item>garnelensandwich</item>
         <item>flughafen</item>
-        <item>erfolg tart</item>
+        <item>erfolgtart</item>
         <item>sternen</item>
         <item>sandsturm</item>
         <item>raum</item>
@@ -26,9 +26,9 @@
         <item>clock</item>
         <item>liseberg</item>
         <item>radiergummi</item>
-        <item>ernährung</item>
+        <item>ernaehrung</item>
         <item>hurtigruten</item>
-        <item>verkleidung trend</item>
+        <item>verkleidungtrend</item>
         <item>rucksack</item>
         <item>Anwendungsprogrammierschnittstelle</item>
     </array>
