neste: sette igang selve spillet.

--- a/S169954Mappe1-master/app/src/main/res/menu/menu_regler.xml
+++ b/S169954Mappe1-master/app/src/main/res/menu/menu_regler.xml
@@ -5,5 +5,5 @@
         android:id="@+id/spraak"
         android:orderInCategory="100"
         android:showAsAction="always"
-        android:title="Språk"/>
+        android:title="@string/spraak"/>
 </menu>
