game interface next

--- a/S169954Mappe1-master/app/src/main/res/drawable/bokstav_bg.xml
+++ b/S169954Mappe1-master/app/src/main/res/drawable/bokstav_bg.xml
@@ -4,8 +4,16 @@
 
     <stroke
         android:width="2dp"
-        android:color="@color/blue">
-        
-    </stroke>
+        android:color="@color/blue"/>
+
+    <solid
+        android:color="@color/purple"/>
+
+    <padding
+        android:bottom="7dp"/>
+
+    <size
+        android:height="10dp"
+        android:width="10dp"/>
 
 </shape>
