--- a/S169954Mappe1-master/app/src/main/res/layout/startspillet.xml
+++ b/S169954Mappe1-master/app/src/main/res/layout/startspillet.xml
@@ -82,11 +82,12 @@
 
     </RelativeLayout>
 
+    <!-- Her skal det stå ordet man skal gjette på -->
     <LinearLayout
         android:id="@+id/ordet"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:background="@color/black"
         android:gravity="center"
         android:orientation="horizontal">
