next: gjett ordet

--- a/S169954Mappe1-master/app/src/main/res/layout/intro.xml
+++ b/S169954Mappe1-master/app/src/main/res/layout/intro.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/imageView"
         android:src="@drawable/introskjerm_bg"
         android:layout_centerInParent="true"
@@ -22,7 +22,7 @@
         android:textColor="@color/blue"
         android:clickable="true"
         android:width="150dp"
-        android:height="100dp"
+        android:height="80dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="180dp" />
