--- a/S169954Mappe1-master/app/src/main/res/values-de/arrays.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-de/arrays.xml
@@ -30,6 +30,6 @@
         <item>hurtigruten</item>
         <item>verkleidungtrend</item>
         <item>rucksack</item>
-        <item>Anwendungsprogrammierschnittstelle</item>
+        <item>quiz</item>
     </array>
 </resources>
