--- a/S169954Mappe1-master/app/src/main/res/values-nb/arrays.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-nb/arrays.xml
@@ -30,6 +30,6 @@
         <item>hurtigruten</item>
         <item>kåpetrend</item>
         <item>tursekk</item>
-        <item>applikasjonsprogrammeringsgrensesnitt</item>
+        <item>quiz</item>
     </array>
 </resources>
