--- a/S169954Mappe1-master/app/src/main/res/drawable/bokstav_bg.xml
+++ b/S169954Mappe1-master/app/src/main/res/drawable/bokstav_bg.xml
@@ -3,8 +3,9 @@
     android:shape="line">
 
     <stroke
-        android:width="2dp"
-        android:color="@color/blue"/>
+        android:width="15dp"
+        android:color="@color/white"/>
+
 
     <solid
         android:color="@color/black"/>
