--- a/S169954Mappe1-master/app/src/main/res/values-en/arrays.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-en/arrays.xml
@@ -30,6 +30,6 @@
         <item>hurtigruten</item>
         <item>coat trend</item>
         <item>backpack</item>
-        <item>applicationprogramminginterface</item>
+        <item>quiz</item>
     </array>
 </resources>
