--- a/S169954Mappe1-master/app/src/main/res/drawable/bokstav_bg.xml
+++ b/S169954Mappe1-master/app/src/main/res/drawable/bokstav_bg.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="15dp"
-        android:color="@color/white"/>
+        android:color="@color/red"/>
 
 
     <solid
