--- a/S169954Mappe1-master/app/src/main/res/drawable/bokstav_bg.xml
+++ b/S169954Mappe1-master/app/src/main/res/drawable/bokstav_bg.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="line">
+    android:shape="rectangle">
 
     <stroke
-        android:width="15dp"
-        android:color="@color/red"/>
+        android:width="10dp"
+        android:color="@color/white"/>
 
 
     <solid
-        android:color="@color/black"/>
+        android:color="@color/red"/>
 
     <padding
-        android:bottom="7dp"/>
+        android:bottom="2dp"/>
 
     <size
-        android:height="25dp"
+        android:height="30dp"
         android:width="25dp"/>
 </shape>
