--- a/S169954Mappe1-master/app/src/main/res/layout/seregler.xml
+++ b/S169954Mappe1-master/app/src/main/res/layout/seregler.xml
@@ -8,5 +8,6 @@
         android:layout_height="fill_parent"
         android:gravity="center"
         android:text="@string/reglene"
-        android:id="@+id/textView"/>
+        android:id="@+id/textView"
+        android:typeface="serif"/>
 </LinearLayout>
